<resources>
    <string name="app_name">WaterSupplyMgmt</string>
    <string name="title_activity_login">Login</string>

    <string name="title_activity_success">Success</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="register">Register</string>
    <string name="already_registered_login_here">Already Registered?\nLogin here.</string>
</resources>